changed header and heading color contrast issues

--- a/index.css
+++ b/index.css
@@ -19,8 +19,7 @@ body {
 #gradient {
   height: auto;
   width: 100%;
-  background-color: rgb(94, 39, 81);
-  background-image: radial-gradient(#f5eb7c, #8e0482);
+  background-color: rgb(42, 13, 13, 0.8);
   box-shadow: #313031 3px 4px 3px;
 }
 
@@ -59,7 +58,7 @@ input[type="text"] {
   z-index: 99;
   border: none;
   outline: none;
-  background-color: rgb(238, 143, 216);
+  background-color: rgb(141, 87, 110);
   color: #ffffff;
   cursor: pointer;
   padding: 12px;
@@ -83,15 +82,16 @@ input[type="text"] {
   font-size: 16px;
   color: #fff;
   width: fit-content;
-  background: radial-gradient(rgb(177, 124, 124), transparent);
-  border-radius: 8px;
+  background: radial-gradient(rgb(42, 13, 13, 1), rgb(42, 13, 13, 0.5));
+  padding: 4px;
+  border-radius: 7px;
 }
 
 #go {
   font-size: 13px;
-  background-color: rgb(238, 143, 216);
+  background-color: rgb(156, 98, 116);
   border-radius: 5px;
-  padding: 4px;
+  padding: 5px;
   color: #fff;
   box-shadow: 3px 1px 3px rgb(145, 144, 144);
   cursor: pointer;
@@ -110,7 +110,8 @@ input[type="text"] {
   width: fit-content;
   color: rgb(252, 250, 250);
   font-weight: 900;
-  background: radial-gradient(rgb(235, 131, 131), transparent);
+  background: radial-gradient(rgb(42, 13, 13, 1), rgb(42, 13, 13, 0.5));
+  padding: 8px;
   border-radius: 8px;
 }
 
@@ -296,6 +297,5 @@ footer {
     background-color: rgb(254, 254, 254);
     box-shadow: 3px 5px 6px rgb(48, 47, 47);
     border-radius: 5px;
-    /* opacity: 0.9; */
   }
 }
